<resources>
<!--    Common-->
    <string name="app_name">AquaLink</string>
    <string name="app_name_with_version">AquaLink v0.1</string>
    <string name="tagline">Connect, Monitor, Control</string>
    <string name="username">Username</string>


<!--    Login Screen-->
    <string name="lbl_login">Login</string>
    <string name="lbl_email">Email Address</string>
    <string name="lbl_password">Password</string>
    <string name="txt_email_hint">Enter your email address</string>
    <string name="txt_password_hint">Enter your password</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="lbl_do_not_have_account">If you don’t have account?</string>
    <string name="btn_create_an_account">Create an Account</string>
    <string name="lbl_login_with">or login with</string>


<!--    Create Account Screen-->
    <string name="lbl_create_an_account">Create an Account</string>
    <string name="lbl_first_name">First Name</string>
    <string name="lbl_terms">agree with terms and conditions</string>
    <string name="txt_first_name_hint">Enter your First name</string>
    <string name="btn_create">Create</string>
    <string name="lbl_already_have_an_account">already have an account</string>


<!--    Forgot Password Screen-->
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_forgot_password_instructions">Please enter your registered email address to receive a verification code.</string>
    <string name="lbl_forgot_password_instructions_for_check_spam">If you don’t see the password reset email in your inbox, please check your spam or junk folder.</string>
    <string name="btn_send">Send</string>

<!--    Dashboard Screen-->
    <string name="lbl_tank_name">Main Tank</string>
    <string name="lbl_connection_state_connected">Connected</string>
    <string name="lbl_connection_state_connecting">Connecting</string>
    <string name="lbl_connection_state_disconnected">Disconnected</string>
    <string name="lbl_water_level">--%</string>
    <string name="lbl_motor_state">Motor Status:</string>
    <string name="lbl_selected_mode">Selected Mode:</string>
    <string name="lbl_estimate_time">Estimate Time:</string>
    <string name="lbl_running_time">Motor Status:</string>

    <string name="value_motor_state">ON</string>
    <string name="value_selected_mode">Auto</string>
    <string name="value_estimate_time">Calculating</string>
    <string name="value_running_time">01.25:00</string>

    <string name="lbl_mode_auto">Auto</string>
    <string name="lbl_mode_manual">Manual</string>
    <string name="lbl_mode_custom">Custom</string>

<!--     Auto Mode Screen  -->
    <string name="lbl_auto_mode_description">Automatically turns the motor ON at 50% and OFF at 100% water level.</string>
    <string name="lbl_auto_mode_settings">Auto Mode Settings</string>

    <string name="txt_auto_on_hint">Enter Auto ON level</string>
    <string name="txt_auto_off_hint">Enter Auto OFF level</string>

    <string name="txt_auto_on">50</string>
    <string name="txt_auto_off">100</string>

    <string name="btn_save_auto_settings">Save</string>

<!--    Manual Mode Screen-->
    <string name="btn_manual_turn_on">Turn ON</string>
    <string name="btn_manual_turn_off">Turn OFF</string>
    <string name="lbl_manual_mode_settings">Manual Mode Settings</string>
    <string name="txt_manual_safety_timeout_hint">Enter Safety Timeout</string>
    <string name="lbl_manual_safety_timeout_description">Safety timeout: Automatically turns off the motor after a set time to prevent overrun.</string>
    <string name="txt_manual_safety_timeout">60</string>
    <string name="btn_save_manual_settings">Save</string>

    btn_save_custom_settings

<!--    Custom Mode Screen-->
    <string name="lbl_custom_mode_settings">Custom Mode Settings</string>

    <string name="txt_custom_on_hint">Enter Custom ON level</string>
    <string name="txt_custom_off_hint">Enter Custom OFF level</string>

    <string name="switch_enable_auto_on_trigger">Enable Auto ON Trigger</string>
    <string name="switch_enable_auto_off_trigger">Enable Auto OFF Trigger</string>

    <string name="btn_save_custom_settings">Save</string>

    <string name="txt_custom_on_default">50</string>
    <string name="txt_custom_off_default">100</string>

<!--    Manu Screen-->
    <!-- Button Texts -->
    <string name="btn_map_view">Map View</string>
    <string name="btn_technical_support">Technical Support</string>
    <string name="btn_user_settings">User Settings</string>
    <string name="btn_app_settings">App Settings</string>
    <string name="btn_manage_devices">Manage Devices</string>
    <string name="btn_customization">Customization</string>
    <string name="btn_user_manual">User Manual</string>
    <string name="btn_about">About</string>
    <string name="btn_logout">Logout</string>
</resources>