<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_manual"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:visibility="gone">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_custom_mode_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity=""
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/stroke"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAutoOnLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_custom_on_hint"
                android:inputType="number"
                android:padding="16dp"
                android:text="@string/txt_custom_on_default"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity=""
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/stroke"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtAutoOffLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_custom_off_hint"
                android:inputType="number"
                android:padding="16dp"
                android:text="@string/txt_custom_off_default"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleAutoOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_enable_auto_on_trigger"
            android:checked="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/toggleAutoOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_enable_auto_off_trigger"
            android:checked="false"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/theme_blue"
            android:text="@string/btn_save_custom_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

    </LinearLayout>
</LinearLayout>
