<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_manual"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:visibility="gone">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOnOffMotor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/theme_blue"
        android:text="@string/btn_manual_turn_on"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/lbl_manual_mode_settings"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity=""
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/stroke"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSafetyTimeout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_manual_safety_timeout_hint"
                android:inputType="number"
                android:padding="16dp"
                android:text="@string/txt_manual_safety_timeout"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_manual_safety_timeout_description"
            android:textColor="@color/warning"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
