<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<!--    android:background="@drawable/background"-->


    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.25"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        android:outlineAmbientShadowColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_login"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeColor="@color/stroke"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_email_hint"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_password"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeColor="@color/stroke"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_password_hint"
                        android:inputType="textPassword"
                        android:padding="16dp"
                        android:textSize="16sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!-- Forgot Password-->
                <TextView
                    android:id="@+id/btnForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btn_forgot_password"
                    android:layout_marginBottom="24dp"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textColor="@color/theme_blue"
                    android:textStyle="bold"/>

                <!-- Login Button -->
                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cornerRadius="8dp"
                    android:backgroundTint="@color/theme_blue"
                    android:text="@string/btn_login"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <!-- create Account -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_do_not_have_account"
                    android:gravity="center"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/btnCreateAnAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_create_an_account"
                    android:textStyle="bold"
                    android:textColor="@color/theme_blue"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"/>

                <!-- login with-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_login_with"
                    android:gravity="center"
                    android:layout_marginTop="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="40dp">

                <ImageButton
                    android:id="@+id/btnloginWithGoogle"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/google"/>

                <ImageButton
                    android:id="@+id/btnLoginWithFacebook"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:background="@drawable/circle"
                    android:src="@drawable/facebook"/>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>